# Spectoprep

./: .buildinfo  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  Makefile  README.rst  authors.html  contributing.html  genindex.html  getting_started.html  history.html  index.html  installation.html  issues-managmement-workflow-process.md  modules.html  objects.inv  package-workflow-process.md  py-modindex.html  pyproject.toml  readme.html  requirements_dev.txt  roughppdyml  search.html  searchindex.js  sphinx-reading-durations.json  tox.ini  updated_package_deployment.md  usage.html
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general_question.yml
.github/scripts/: extract_version.sh
.github/workflows/: changelog-workflow.yml  ci.yml  create-release-tag.yml  docs-pages.yml  environment.yml  github-release.yml  issue-management.yml  python-package-deployment.yml  release-prep.yml  release.yml  version-tagging.yml
.github/workflows/conda-recipe/: meta.yml
_modules/: index.html
_modules/spectoprep/: cli.html  logging.html
_modules/spectoprep/modelling/: ridge.html
_modules/spectoprep/pipeline/: builder.html  optimizer.html  utils.html
_modules/spectoprep/preprocessing/: baseline.html  norml.html  scatter.html  smoothing.html
_modules/spectoprep/visualization/: plots.html
_sources/: index.rst.txt  modules.rst.txt
_sources/api/: cli.rst.txt  index.rst.txt  logging.rst.txt  optimizer.rst.txt  preprocessing.rst.txt  visualization.rst.txt
_sources/notebooks/: tutorial.ipynb.txt
_static/: documentation_options.js
api/: cli.html  index.html  logging.html  modelling.html  optimizer.html  preprocessing.html  visualization.html
ci/: conda-environment.yml
conda-recipe/: meta.yaml
docs/: conf.py  getting_started.rst  installation.rst  requirements.txt  usage.rst
docs/api/: modelling.rst
docs/notebooks/: tutorial.ipynb
examples/: README.rst  make_paper_prediction_figure.py  plotting_demo.py  recompute_corn_nested_metrics.py  run_corn_benchmark.py
examples/corn_results/: full_results.json  optimal_pipelines.json
examples/data/: README.rst
notebook/: test.ipynb
notebooks/: corn_benchmark.html  tutorial.html
src/spectoprep/: __init__.py  cli.py  logging.py
src/spectoprep/modelling/: __init__.py  ridge.py
src/spectoprep/pipeline/: __init__.py  builder.py  config.py  optimizer.py  utils.py
src/spectoprep/preprocessing/: __init__.py  baseline.py  norml.py  scatter.py  smoothing.py
src/spectoprep/visualization/: __init__.py  plots.py
tests/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_optimizer.py  test_plots.py  test_plotter_workflow.py  test_preprocessing_baseline_smoothing.py  test_preprocessing_norml.py  test_preprocessing_scatter.py  test_ridge.py  test_utils.py
