[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectoprep"
dynamic = ["version"]
description = "A comprehensive spectral preprocessing toolkit for chemometrics"
readme = "README.rst"
authors = [
  {name = "Habeeb Babatunde", email = "babatundehabeeb2@gmail.com"}
]
maintainers = [
  {name = "Habeeb Babatunde", email = "babatundehabeeb2@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT license"}
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "scikit-learn>=1.3",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "bayesian-optimization>=1.4",
  "typer>=0.9",
  "rich>=13.0",
  "structlog>=23.1",
]

[project.scripts]
spectoprep = "spectoprep.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
]
lint = [
    "ruff>=0.4",
    "mypy>=1.5",
]
docs = [
    "sphinx",
    "myst-parser",
    "furo",
    "sphinx_rtd_theme",
    "pydata-sphinx-theme",
    "nbsphinx",
]
# Everything, for local development.
dev = [
    "spectoprep[test,lint,docs]",
]

[project.urls]

bugs = "https://github.com/habeeb3579/spectoprep/issues"
changelog = "https://github.com/habeeb3579/spectoprep/blob/master/changelog.md"
homepage = "https://github.com/habeeb3579/spectoprep"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Ruff (lint + format)
# ---------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

# Pytest
# ------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: end-to-end optimization runs (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# Coverage
# --------
[tool.coverage.run]
branch = true
source = ["spectoprep"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# Mypy
# ----
[tool.mypy]
files = "src"
ignore_missing_imports = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.setuptools.dynamic]
version = { attr = "spectoprep.__version__" }

#install with pip install -e .[dev] or pip install -e ".[dev]"
#build sphinx by cd docs, make html. The cd _build/html and python -m http.server
#convert rst to md using pip install rst-to-myst[sphinx], pip install myst-parser
#rst2myst convert docs/**/*.rst
#pip install sphinx-autobuild (option 2 to build sphinx that tracks changes in the code)
#sphinx-autobuild docs/source docs/_build/html or sphinx-autobuild docs docs/_build/html
#make clean (use rm -rf docs/_build instead)
#to use nbsphinx, pip install nbsphinx and brew install pandoc